Add: 'Be the first to know' button to Builder Era section

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <img src="images/projects/ah.jpg" alt="badass" class="badass">
         <h3> Age 23-Present: Builder Era</h3>
         <p>More coming soon! But, I promise to build in public!</p>
+        <a href="https://form.typeform.com/to/kDb9vz3N" target="_blank" class="cta-button">Be the first to know what I'm building next →</a>
     </article>
 </section>
     
