Update index.html with new content and Vercel Analytics

--- a/index.html
+++ b/index.html
@@ -86,8 +86,6 @@
         <a href="https://form.typeform.com/to/kDb9vz3N" target="_blank" class="cta-button">Be the first to know what I'm building next →</a>
     </article>
 </section>
-    
-</body>
 <!--CONTACT-INFORMATION--> 
 <footer class="contact-info">
     <h2>Contact</h2>
@@ -100,5 +98,7 @@
     <br>
     <p>© 2023 anj</p>
     </footer>
+     <script defer src="https://analytics.vercel.com/script.js" data-token="prj_YeaX1IjWNjn8lxWaHdkth8CXfoD5">
+    </script>
+</body>
 </html>
-
