Update index.html with Vercel Analytics and latest content

--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
     <br>
     <p>© 2023 anj</p>
     </footer>
-     <script defer src="https://analytics.vercel.com/script.js" data-token="prj_YeaX1IjWNjn8lxWaHdkth8CXfoD5">
-    </script>
+     <script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
 </body>
 </html>
